Actualizacion para swagger en clientes y pedidos
